[package]
name = "bsky-rmcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bsky-sdk = "0.1.19"
rmcp = "0.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["io-std", "rt-multi-thread"] }

[patch.crates-io]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main" }
